fixed text overflowing on the modal

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,9 @@
   margin-left: -125px;
 }
 
+.inside-restaurant-info {
+    overflow: scroll;
+}
 .modal-open {
   display: block;
 }
